fixed some wrapping issues and added some requested features

--- a/assets/stylesheets/admin.css
+++ b/assets/stylesheets/admin.css
@@ -8,7 +8,11 @@
 
 :root
 {
-    --blue: rgb(103, 183, 253);
+    --blue: lightskyblue;
+
+    --weight: 400;
+
+    --click-transition: all 400ms ease;
 }
 
 /*--------body styles*/
@@ -106,10 +110,10 @@ main
 
 .main-title
 {
-    width: 98%;
+    width: 100%;
     font-size: 3.5vw;
     color: grey;
-    padding-left: 1vw;
+    text-align: center;
 }
 
 .main-title span
@@ -120,7 +124,7 @@ main
 .single-day
 {
     background-color: grey;
-    width: 300px;
+    width: 400px;
     border-radius: 12px;
     margin: 1vh 0;
 }
@@ -147,11 +151,39 @@ main
     padding: 2px 4px;
     border-radius: 0 0 12px 12px;
     color: grey;
+    max-height: 525px;
+    overflow-y: auto;
 }
 
 .admin-info
 {
     margin: 0px;
+}
+
+.mock-footer
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1vw;
+    margin-top: 1vh;
+}
+
+.mock-footer button
+{
+    border: none;
+    width: 100%;
+    border-radius: 12px;
+    padding: 1vh 1.5vw;
+    background-color: var(--blue);
+    color: white;
+    font-size: 1.5vw;
+    transition: var(--click-transition);
+}
+
+.mock-footer button:hover
+{
+    background-color: white;
+    color: grey;
 }
 
 .shift-item
@@ -160,6 +192,11 @@ main
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 1vh 1vw;
+}
+
+.center-item
+{
+    text-align: center;
 }
 
 .shift-item:last-child
@@ -171,7 +208,18 @@ main
 {
     width: 65vw;
     margin: 1vh 1vw;
-    
+}
+
+.weekly-toggle
+{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    border-radius: 12px 12px 0 0;
+    padding: 10px 0;
+    width: 100%;
+    font-size: 1.5vw;
+    color: grey;
+    text-align: center;
 }
 
 .weekday
@@ -179,6 +227,28 @@ main
     background-color: grey;
     width: fit-content;
     border-radius: 12px;
+}
+
+.arrow
+{
+    border: solid var(--blue);
+    height: 10px;
+    width: 10px;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    padding: 3px;
+}
+
+.right
+{
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+  
+.left
+{
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
 }
 
 .swiper-button-next, .swiper-button-prev
